Universal 7-source vulnerability intelligence with 318K CVEs
Rewrite update-intel.py as universal downloader covering 7 sources:
NVD (318K CVEs via 2-year multi-window), EPSS full dataset (315K scores),
Exploit-DB (30K mappings), Metasploit (3.5K modules), Nuclei (3.8K templates),
CISA Vulnrichment (131K SSVC triage decisions), and CISA KEV (1.5K entries).

Add 3 new SQLite tables to vuln_database.py (epss_scores, exploit_refs,
vulnrichment) with bulk import methods and enrichment pipeline integration.
Findings now include exploit intelligence and SSVC triage context.

Exclude vuln_intel.db from git (732MB) - regenerate with update-intel.py.

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@ data/logs/
 data/reports/
 data/archives/
 
-# Intel data IS tracked (for airgapped/offline operation)
-# data/threat_intel/ - KEV catalog, EPSS scores
-# data/vuln_db/      - NVD CVE cache
+# Intel data: small files tracked, large DB excluded
+# data/threat_intel/ - KEV + EPSS JSON (~2.5MB) - TRACKED for basic offline use
+# data/vuln_db/      - Full NVD/EPSS/exploit DB (~700MB+) - EXCLUDED, regenerate with:
+#                      bin/update-intel.py [--api-key KEY]
+data/vuln_db/
 
 # Credentials (sensitive)
 config/credentials.yaml
